# DriftQCap

./: LICENSE  README.md  REPRODUCE.md  RUN_WORKFLOW.md
dataset_release/: README.md  croissant.json  schema_compatibility_report.json
dataset_release/real_hardware/: README.md  freeze_manifest.json  real_data_multibackend_all.csv  real_eval_with_synthetic_source.csv
dataset_release/real_hardware/backend_snapshots/: backend_snapshot.json  backend_snapshot_ibm_fez_run_20260425T080829Z.json  backend_snapshot_ibm_fez_run_20260425T081340Z.json  backend_snapshot_ibm_fez_run_20260425T161531Z.json  (+24 more)
dataset_release/semi_synth/: README.md  freeze_manifest.json  semi_synth_from_snapshots_clean.csv
dataset_release/synthetic/: README.md  driftqcap_synthetic_paper_rf_v3.csv  freeze_manifest.json
pipeline_code/: README.md  pyproject.toml  requirements.txt
pipeline_code/scripts/: evaluate_release_dataset.py  freeze_synthetic_paper_dataset.py  make_submission_bundle.py  prepare_external_dataset.py  run_paper_ready.py  run_suite.py  validate_release_schema.py
pipeline_code/src/driftqcap/: __init__.py  active.py  calibration.py  config.py  data.py  evaluation.py  features.py  logging_utils.py  models.py  paper_utils.py  persistence.py  pipeline.py  plots.py  reporting.py  stats.py  synthetic.py  utils.py
pipeline_code/tests/: test_active_trimmed.py  test_calibration_local.py  test_compound_shift.py  test_data_threshold.py  test_external_persistence.py  test_paper_utils.py  test_plots_reliability.py  test_residual_adapter.py  test_smoke.py
