[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftqcap"
version = "0.3.0"
description = "DriftQCap: drift-aware few-shot quantum capability learning benchmark and experiment suite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "scipy>=1.11,<2",
  "scikit-learn>=1.4,<2",
  "xgboost>=2.0,<3",
  "lightgbm>=4.0,<5",
  "matplotlib>=3.8,<4",
  "joblib>=1.3,<2",
]

[project.optional-dependencies]
qpa = [
  "torch>=2.2,<3",
  "torch-geometric>=2.5,<3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
